[project]
name = "troubleshooting_internetwithviet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Viet Than", email = "thanhoangviet@gmail.com"},
]
dependencies = [
    "litestar[full]>=2.4.4",
    "aiosqlite>=0.19.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
